parser/sparql/SparqlParser.py
# Generated from Sparql.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SparqlParser ( Parser ):

    grammarFileName = "Sparql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'BASE'", "'PREFIX'", "'SELECT'", "'DISTINCT'", 
                     "'REDUCED'", "'*'", "'('", "'COUNT'", "')'", "'AS'", 
                     "'CONSTRUCT'", "'DESCRIBE'", "'ASK'", "'FROM'", "'NAMED'", 
                     "'WHERE'", "'ORDER'", "'BY'", "'ASC'", "'DESC'", "'LIMIT'", 
                     "'OFFSET'", "'{'", "'.'", "'}'", "'OPTIONAL'", "'GRAPH'", 
                     "'UNION'", "'FILTER'", "','", "';'", "'a'", "'['", 
                     "']'", "'||'", "'&&'", "'='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'+'", "'-'", "'/'", "'!'", "'STR'", 
                     "'LANG'", "'LANGMATCHES'", "'DATATYPE'", "'BOUND'", 
                     "'sameTerm'", "'isIRI'", "'isURI'", "'isBLANK'", "'isLITERAL'", 
                     "'REGEX'", "'^^'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IRI_REF", "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", 
                      "VAR1", "VAR2", "LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", 
                      "INTEGER_POSITIVE", "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", 
                      "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", 
                      "EXPONENT", "STRING_LITERAL1", "STRING_LITERAL2", 
                      "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", "ECHAR", 
                      "NIL", "ANON", "PN_CHARS_U", "VARNAME", "PN_PREFIX", 
                      "PN_LOCAL", "WS" ]

    RULE_query = 0
    RULE_prologue = 1
    RULE_baseDecl = 2
    RULE_prefixDecl = 3
    RULE_selectQuery = 4
    RULE_entityQueryCondition = 5
    RULE_countQueryCondition = 6
    RULE_constructQuery = 7
    RULE_describeQuery = 8
    RULE_askQuery = 9
    RULE_datasetClause = 10
    RULE_defaultGraphClause = 11
    RULE_namedGraphClause = 12
    RULE_sourceSelector = 13
    RULE_whereClause = 14
    RULE_solutionModifier = 15
    RULE_limitOffsetClauses = 16
    RULE_orderClause = 17
    RULE_orderCondition = 18
    RULE_limitClause = 19
    RULE_offsetClause = 20
    RULE_groupGraphPattern = 21
    RULE_triplesBlock = 22
    RULE_graphPatternNotTriples = 23
    RULE_optionalGraphPattern = 24
    RULE_graphGraphPattern = 25
    RULE_groupOrUnionGraphPattern = 26
    RULE_filter_ = 27
    RULE_constraint = 28
    RULE_functionCall = 29
    RULE_argList = 30
    RULE_constructTemplate = 31
    RULE_constructTriples = 32
    RULE_triplesSameSubject = 33
    RULE_propertyListNotEmpty = 34
    RULE_propertyList = 35
    RULE_objectList = 36
    RULE_object_ = 37
    RULE_verb = 38
    RULE_triplesNode = 39
    RULE_blankNodePropertyList = 40
    RULE_collection = 41
    RULE_graphNode = 42
    RULE_varOrTerm = 43
    RULE_varOrIRIref = 44
    RULE_var_ = 45
    RULE_graphTerm = 46
    RULE_expression = 47
    RULE_conditionalOrExpression = 48
    RULE_conditionalAndExpression = 49
    RULE_valueLogical = 50
    RULE_relationalExpression = 51
    RULE_numericExpression = 52
    RULE_additiveExpression = 53
    RULE_multiplicativeExpression = 54
    RULE_unaryExpression = 55
    RULE_primaryExpression = 56
    RULE_brackettedExpression = 57
    RULE_builtInCall = 58
    RULE_regexExpression = 59
    RULE_iriRefOrFunction = 60
    RULE_rdfLiteral = 61
    RULE_numericLiteral = 62
    RULE_numericLiteralUnsigned = 63
    RULE_numericLiteralPositive = 64
    RULE_numericLiteralNegative = 65
    RULE_booleanLiteral = 66
    RULE_string = 67
    RULE_iriRef = 68
    RULE_prefixedName = 69
    RULE_blankNode = 70

    ruleNames =  [ "query", "prologue", "baseDecl", "prefixDecl", "selectQuery", 
                   "entityQueryCondition", "countQueryCondition", "constructQuery", 
                   "describeQuery", "askQuery", "datasetClause", "defaultGraphClause", 
                   "namedGraphClause", "sourceSelector", "whereClause", 
                   "solutionModifier", "limitOffsetClauses", "orderClause", 
                   "orderCondition", "limitClause", "offsetClause", "groupGraphPattern", 
                   "triplesBlock", "graphPatternNotTriples", "optionalGraphPattern", 
                   "graphGraphPattern", "groupOrUnionGraphPattern", "filter_", 
                   "constraint", "functionCall", "argList", "constructTemplate", 
                   "constructTriples", "triplesSameSubject", "propertyListNotEmpty", 
                   "propertyList", "objectList", "object_", "verb", "triplesNode", 
                   "blankNodePropertyList", "collection", "graphNode", "varOrTerm", 
                   "varOrIRIref", "var_", "graphTerm", "expression", "conditionalOrExpression", 
                   "conditionalAndExpression", "valueLogical", "relationalExpression", 
                   "numericExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression", "brackettedExpression", 
                   "builtInCall", "regexExpression", "iriRefOrFunction", 
                   "rdfLiteral", "numericLiteral", "numericLiteralUnsigned", 
                   "numericLiteralPositive", "numericLiteralNegative", "booleanLiteral", 
                   "string", "iriRef", "prefixedName", "blankNode" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    IRI_REF=61
    PNAME_NS=62
    PNAME_LN=63
    BLANK_NODE_LABEL=64
    VAR1=65
    VAR2=66
    LANGTAG=67
    INTEGER=68
    DECIMAL=69
    DOUBLE=70
    INTEGER_POSITIVE=71
    DECIMAL_POSITIVE=72
    DOUBLE_POSITIVE=73
    INTEGER_NEGATIVE=74
    DECIMAL_NEGATIVE=75
    DOUBLE_NEGATIVE=76
    EXPONENT=77
    STRING_LITERAL1=78
    STRING_LITERAL2=79
    STRING_LITERAL_LONG1=80
    STRING_LITERAL_LONG2=81
    ECHAR=82
    NIL=83
    ANON=84
    PN_CHARS_U=85
    VARNAME=86
    PN_PREFIX=87
    PN_LOCAL=88
    WS=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prologue(self):
            return self.getTypedRuleContext(SparqlParser.PrologueContext,0)


        def EOF(self):
            return self.getToken(SparqlParser.EOF, 0)

        def selectQuery(self):
            return self.getTypedRuleContext(SparqlParser.SelectQueryContext,0)


        def constructQuery(self):
            return self.getTypedRuleContext(SparqlParser.ConstructQueryContext,0)


        def describeQuery(self):
            return self.getTypedRuleContext(SparqlParser.DescribeQueryContext,0)


        def askQuery(self):
            return self.getTypedRuleContext(SparqlParser.AskQueryContext,0)


        def getRuleIndex(self):
            return SparqlParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = SparqlParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.prologue()
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SparqlParser.T__2]:
                self.state = 143
                self.selectQuery()
                pass
            elif token in [SparqlParser.T__10]:
                self.state = 144
                self.constructQuery()
                pass
            elif token in [SparqlParser.T__11]:
                self.state = 145
                self.describeQuery()
                pass
            elif token in [SparqlParser.T__12]:
                self.state = 146
                self.askQuery()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 149
            self.match(SparqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrologueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseDecl(self):
            return self.getTypedRuleContext(SparqlParser.BaseDeclContext,0)


        def prefixDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.PrefixDeclContext)
            else:
                return self.getTypedRuleContext(SparqlParser.PrefixDeclContext,i)


        def getRuleIndex(self):
            return SparqlParser.RULE_prologue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrologue" ):
                listener.enterPrologue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrologue" ):
                listener.exitPrologue(self)




    def prologue(self):

        localctx = SparqlParser.PrologueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prologue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SparqlParser.T__0:
                self.state = 151
                self.baseDecl()


            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SparqlParser.T__1:
                self.state = 154
                self.prefixDecl()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IRI_REF(self):
            return self.getToken(SparqlParser.IRI_REF, 0)

        def getRuleIndex(self):
            return SparqlParser.RULE_baseDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseDecl" ):
                listener.enterBaseDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseDecl" ):
                listener.exitBaseDecl(self)




    def baseDecl(self):

        localctx = SparqlParser.BaseDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_baseDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(SparqlParser.T__0)
            self.state = 161
            self.match(SparqlParser.IRI_REF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrefixDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PNAME_NS(self):
            return self.getToken(SparqlParser.PNAME_NS, 0)

        def IRI_REF(self):
            return self.getToken(SparqlParser.IRI_REF, 0)

        def getRuleIndex(self):
            return SparqlParser.RULE_prefixDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixDecl" ):
                listener.enterPrefixDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixDecl" ):
                listener.exitPrefixDecl(self)




    def prefixDecl(self):

        localctx = SparqlParser.PrefixDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_prefixDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(SparqlParser.T__1)
            self.state = 164
            self.match(SparqlParser.PNAME_NS)
            self.state = 165
            self.match(SparqlParser.IRI_REF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whereClause(self):
            return self.getTypedRuleContext(SparqlParser.WhereClauseContext,0)


        def solutionModifier(self):
            return self.getTypedRuleContext(SparqlParser.SolutionModifierContext,0)


        def entityQueryCondition(self):
            return self.getTypedRuleContext(SparqlParser.EntityQueryConditionContext,0)


        def countQueryCondition(self):
            return self.getTypedRuleContext(SparqlParser.CountQueryConditionContext,0)


        def datasetClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.DatasetClauseContext)
            else:
                return self.getTypedRuleContext(SparqlParser.DatasetClauseContext,i)


        def getRuleIndex(self):
            return SparqlParser.RULE_selectQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectQuery" ):
                listener.enterSelectQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectQuery" ):
                listener.exitSelectQuery(self)




    def selectQuery(self):

        localctx = SparqlParser.SelectQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_selectQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(SparqlParser.T__2)
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SparqlParser.T__3, SparqlParser.T__4, SparqlParser.T__5, SparqlParser.VAR1, SparqlParser.VAR2]:
                self.state = 168
                self.entityQueryCondition()
                pass
            elif token in [SparqlParser.T__6]:
                self.state = 169
                self.countQueryCondition()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SparqlParser.T__13:
                self.state = 172
                self.datasetClause()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self.whereClause()
            self.state = 179
            self.solutionModifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityQueryConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.Var_Context)
            else:
                return self.getTypedRuleContext(SparqlParser.Var_Context,i)


        def getRuleIndex(self):
            return SparqlParser.RULE_entityQueryCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityQueryCondition" ):
                listener.enterEntityQueryCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityQueryCondition" ):
                listener.exitEntityQueryCondition(self)




    def entityQueryCondition(self):

        localctx = SparqlParser.EntityQueryConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_entityQueryCondition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SparqlParser.T__3 or _la==SparqlParser.T__4:
                self.state = 181
                _la = self._input.LA(1)
                if not(_la==SparqlParser.T__3 or _la==SparqlParser.T__4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SparqlParser.VAR1, SparqlParser.VAR2]:
                self.state = 185 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 184
                    self.var_()
                    self.state = 187 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SparqlParser.VAR1 or _la==SparqlParser.VAR2):
                        break

                pass
            elif token in [SparqlParser.T__5]:
                self.state = 189
                self.match(SparqlParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CountQueryConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entityQueryCondition(self):
            return self.getTypedRuleContext(SparqlParser.EntityQueryConditionContext,0)


        def var_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.Var_Context)
            else:
                return self.getTypedRuleContext(SparqlParser.Var_Context,i)


        def getRuleIndex(self):
            return SparqlParser.RULE_countQueryCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCountQueryCondition" ):
                listener.enterCountQueryCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCountQueryCondition" ):
                listener.exitCountQueryCondition(self)




    def countQueryCondition(self):
